[gd_scene load_steps=12 format=3 uid="uid://co4givesqwyy5"]

[ext_resource type="Script" uid="uid://bjdyqrsyqvnje" path="res://pause_menu.gd" id="1_86lni"]
[ext_resource type="Script" uid="uid://bohfpry5mulnx" path="res://master_volume.gd" id="2_02lji"]
[ext_resource type="Script" uid="uid://bcv0wvnvo5yo3" path="res://scale_control.gd" id="3_rvy5e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pbtgn"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7jlr6"]
bg_color = Color(0.542318, 0.542318, 0.542318, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_enwfr"]
bg_color = Color(0.6941206, 0.6941206, 0.6941205, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pbtgn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_um2lw"]
bg_color = Color(0, 0, 0, 0.29411766)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m82ya"]
bg_color = Color(0, 0, 0, 0.19607843)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxLine" id="StyleBoxLine_7jlr6"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_enwfr"]
color = Color(0.35714206, 0.55610263, 1, 1)
thickness = 6

[node name="pause Menu" type="Control"]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -575.0
offset_top = -321.0
offset_right = 576.0
offset_bottom = 326.81415
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_86lni")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -604.5
offset_top = -349.5
offset_right = 604.5
offset_bottom = 349.5
grow_horizontal = 2
grow_vertical = 2

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 23.0
offset_top = -131.90707
offset_right = 301.0
offset_bottom = 132.09293
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="ButtonUnpuase" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_pbtgn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7jlr6")
theme_override_styles/hover = SubResource("StyleBoxFlat_enwfr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pbtgn")
text = "Zpět do hry
"

[node name="ButtonSettings" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_pbtgn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7jlr6")
theme_override_styles/hover = SubResource("StyleBoxFlat_enwfr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pbtgn")
text = "Nastavení"

[node name="ButtonMenu" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_pbtgn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7jlr6")
theme_override_styles/hover = SubResource("StyleBoxFlat_enwfr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pbtgn")
text = "Vrátit se do menu"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -214.0
offset_top = -18.0
offset_right = 214.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 70
text = "pozastaveno"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -503.6781
offset_top = -240.90707
offset_right = 503.6781
offset_bottom = 246.09293
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_um2lw")

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -501.5
offset_top = -241.5
offset_right = -269.9032
offset_bottom = -186.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Nastavení"
horizontal_alignment = 1

[node name="ButtonBack" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = 167.5
offset_right = 132.0
offset_bottom = 232.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_pbtgn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7jlr6")
theme_override_styles/hover = SubResource("StyleBoxFlat_enwfr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pbtgn")
text = "Zpět"

[node name="HBoxContainer" type="HBoxContainer" parent="Options"]
layout_mode = 0
offset_left = 11.678101
offset_top = 58.5
offset_right = 994.6781
offset_bottom = 399.0
theme_override_constants/separation = 20

[node name="PanelZvuk" type="Panel" parent="Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_m82ya")

[node name="MasterVolume" type="HSlider" parent="Options/HBoxContainer/PanelZvuk"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -119.0
offset_right = 225.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_7jlr6")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_enwfr")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("2_02lji")
audio_bus_name = "Master"

[node name="Label2" type="Label" parent="Options/HBoxContainer/PanelZvuk"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.3992
offset_top = -141.0
offset_right = 81.3992
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Hlavní zvuk"
horizontal_alignment = 1

[node name="Title" type="Label" parent="Options/HBoxContainer/PanelZvuk"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.0
offset_top = -169.5
offset_right = -129.0
offset_bottom = -120.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Audio"
horizontal_alignment = 1

[node name="Music" type="HSlider" parent="Options/HBoxContainer/PanelZvuk"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -66.0
offset_right = 225.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_7jlr6")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_enwfr")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("2_02lji")
audio_bus_name = "Music"

[node name="Label3" type="Label" parent="Options/HBoxContainer/PanelZvuk"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.3992
offset_top = -88.0
offset_right = 81.3992
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Hudba"
horizontal_alignment = 1

[node name="SFX" type="HSlider" parent="Options/HBoxContainer/PanelZvuk"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -13.0
offset_right = 225.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_7jlr6")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_enwfr")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("2_02lji")
audio_bus_name = "SFX"

[node name="Label4" type="Label" parent="Options/HBoxContainer/PanelZvuk"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.3992
offset_top = -35.0
offset_right = 81.3992
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "SFX"
horizontal_alignment = 1

[node name="PanelOstatni" type="Panel" parent="Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_m82ya")

[node name="Title" type="Label" parent="Options/HBoxContainer/PanelOstatni"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 110.5
offset_top = -167.5
offset_right = 224.5
offset_bottom = -118.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Ostatní"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="Options/HBoxContainer/PanelOstatni"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -88.5
offset_right = -14.0
offset_bottom = -50.5
grow_horizontal = 0
grow_vertical = 2
selected = 0
fit_to_longest_item = false
item_count = 5
popup/item_0/text = "Ultra"
popup/item_0/id = 0
popup/item_1/text = "Výsoká"
popup/item_1/id = 1
popup/item_2/text = "Střední"
popup/item_2/id = 2
popup/item_3/text = "Nízká"
popup/item_3/id = 3
popup/item_4/text = "Brambora"
popup/item_4/id = 4
script = ExtResource("3_rvy5e")

[node name="Label2" type="Label" parent="Options/HBoxContainer/PanelOstatni"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.89917
offset_top = -126.5
offset_right = 183.89917
offset_bottom = -77.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Kvalita textur"
horizontal_alignment = 1

[connection signal="pressed" from="MainButtons/ButtonUnpuase" to="." method="_on_unpuase_pressed"]
[connection signal="pressed" from="MainButtons/ButtonSettings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainButtons/ButtonMenu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Options/ButtonBack" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="Options/HBoxContainer/PanelZvuk/MasterVolume" to="Options/HBoxContainer/PanelZvuk/MasterVolume" method="_on_value_changed"]
[connection signal="value_changed" from="Options/HBoxContainer/PanelZvuk/Music" to="Options/HBoxContainer/PanelZvuk/Music" method="_on_value_changed"]
[connection signal="value_changed" from="Options/HBoxContainer/PanelZvuk/SFX" to="Options/HBoxContainer/PanelZvuk/SFX" method="_on_value_changed"]
